--- a/GradeSix/Emmanuella-Aderibigbe-Result.html
+++ b/GradeSix/Emmanuella-Aderibigbe-Result.html
@@ -95,7 +95,7 @@
                      <h2> Grade Six </h2>
 
                      <table>  
-                        <p>Continuous Assessment Scores for Term  3rd Term 2023/2024  </p>
+                        <p>Continuous Assessment Scores for Term: 3rd Term 2023/2024  </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
