--- a/PreSchool/Bada-Moraninuoluwa-Result.html
+++ b/PreSchool/Bada-Moraninuoluwa-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1">
-                     <h2>Result for <br>Bada Moraninuoluwa</h2><br>
+                     <h2>Result for <br>Bada Morayaninuoluwa</h2><br>
                      <h2> Pre School </h2>
                      <p>Continuous Assessment Scores for Term Third a2023/2024 </p>
                   <!-- Attendance Table-->
