--- a/PreSchool/Oluwaseun-David-Result.html
+++ b/PreSchool/Oluwaseun-David-Result.html
@@ -136,7 +136,10 @@
                           <th>Handwriting</th>
                           <th>Creative Art</th>
                           <th>Computer</th>
-                         
+                           th>French</th>
+                          <th>General Paper</th>
+                          <th>CRS</th>
+                          <th>Montessori Science</th> 
                         </tr>
                         <tr>
                            <td>100</td>
