--- a/GradeOne/Akintola-Phoebe-Result.html
+++ b/GradeOne/Akintola-Phoebe-Result.html
@@ -509,7 +509,7 @@
                                              <p>Class Teachers Comment:<br>I`m so proud of her and wish her well for second grade and beyond.</p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teachers Comment:A  very good result.<br>_____________________________________________________</p>
+                                             <p>Head Teachers Comment:<br>Promoted to grade 2</p>
             <table>
                         <p>Continuous Assessment Scores for Term: 2nd Term 2023/2024.</p>
                                              <!-- Attendance Table-->
