--- a/GradeThree/Adaramaja-Akinbiyi-Result.html
+++ b/GradeThree/Adaramaja-Akinbiyi-Result.html
@@ -683,7 +683,7 @@
                           <td>Very Good</td>
                           <td>Very Good</td>
                           <td>Very Good</td>
-                          <td>Excellent/td>
+                          <td>Excellent</td>
                           <td>Excellent</td>
                           <td>Very Good</td>
                           <td>Good</td>
@@ -807,7 +807,7 @@
                         </tr>
                         <tr>
                           <td>Leadership</td>
-                          <td><*/td>
+                          <td>*</td>
                           <td></td>
                           <td></td>
                           <td></td>
