--- a/GradeThree/Fakayode-Adeoluwa-Result.html
+++ b/GradeThree/Fakayode-Adeoluwa-Result.html
@@ -691,7 +691,7 @@
                           <td>Excellent</td>
                           <td>Very Good</td>
                           <td>Very Good</td>
-                          <td>G00d</td>
+                          <td>Good</td>
                           <td></td>
                           <td>Teachers Remarks</td>                           
                         </tr>
