--- a/GradeTwo/Adeniyi-Derek-Result.html
+++ b/GradeTwo/Adeniyi-Derek-Result.html
@@ -502,10 +502,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Temiloluwa is cheerful but there is need to put in<br> more effort in his studies._____________________________________________________</p>
+                     <p>Class Teachers Comment: This is a brilliant result.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Temiloluwa needs to take his work more seriously.<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Promoted to Grade 3 .<br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
