--- a/GradeTwo/Akande-Wisdom-Result.html
+++ b/GradeTwo/Akande-Wisdom-Result.html
@@ -502,7 +502,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Wisdom always yield to corrected.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Wisdom always yield to correction.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Wisdom is promoted to grade 3.<br>_____________________________________________________</p>
