--- a/GradeTwo/Amiola-Shalom-Result.html
+++ b/GradeTwo/Amiola-Shalom-Result.html
@@ -502,7 +502,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Shalom is extremely brilliant. Keep it up.<br> _____________________________________________________</p>
+                     <p>Class Teachers Comment: Shalom is extremely brilliant. Keep it up!.<br> _____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Commen:Shalom is promoted to grade 3.<br>_____________________________________________________</p>
