--- a/GradeTwo/Odebunmi-Temisire-Result.html
+++ b/GradeTwo/Odebunmi-Temisire-Result.html
@@ -500,7 +500,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Don't give up Temisire.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment:Keep it up!.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Promoted to grade 3.<br>_____________________________________________________</p>
