--- a/GradeTwo/Oyeniran-Olumide-Result.html
+++ b/GradeTwo/Oyeniran-Olumide-Result.html
@@ -500,7 +500,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Don't give up Olumide.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Brilliant performance!<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Promoted to grade 3.<br>_____________________________________________________</p>
