--- a/GradeTwo/Bello-Oluwalonimi-Result.html
+++ b/GradeTwo/Bello-Oluwalonimi-Result.html
@@ -502,7 +502,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Don't give up Oluwalonimi.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: An excellent performance!<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Promoted to grade 3.<br>_____________________________________________________</p>
