--- a/GradeThree/Olayemi-Aanuoluwaposimi-Result.html
+++ b/GradeThree/Olayemi-Aanuoluwaposimi-Result.html
@@ -1341,7 +1341,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Aanuoluwa participates actively in the classroom.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Aanuoluwanimi participates actively in the classroom.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: A very good result.<br>_____________________________________________________</p>
