--- a/GradeThree/Owolabi-Christopher-Result.html
+++ b/GradeThree/Owolabi-Christopher-Result.html
@@ -504,7 +504,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Christopher is brilliant and has continued to make steady progress in his academics.</p>
+                     <p>Class Teachers Comment: Christopher is intelligent and has continued to make steady progress in his academics.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Promoted to grade 4.</p>
