--- a/GradeThree/Adetola-Toluwanimi-Result.html
+++ b/GradeThree/Adetola-Toluwanimi-Result.html
@@ -506,7 +506,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Toluwanimi is improving gradually.</p>
+                     <p>Class Teachers Comment: Toluwanimi is a conscientious girl.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Promoted to grade 4.</p>
@@ -922,7 +922,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Toluwanimi is improving academically.</p>
+                     <p>Class Teachers Comment: Toluwanimi is improving academically and cooperates with others.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Good job! Do not relent in your studies.</p>
