--- a/GradeThree/Akinsolu-Grace-Result.html
+++ b/GradeThree/Akinsolu-Grace-Result.html
@@ -505,7 +505,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Grace is a concientious girl and has improved academically.</p>
+                     <p>Class Teachers Comment: Grace is  brilliant and has improved academically.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Promoted to grade 4.</p>
