--- a/PreSchool/Boyejo-Daniel-Result.html
+++ b/PreSchool/Boyejo-Daniel-Result.html
@@ -113,7 +113,7 @@
                        </tr>
                        <tr>
                          <td>No. of times school opened</td>
-                         <td>120</td> 
+                         <td>122</td> 
                                         
                       </tr>
                       <tr>
@@ -479,10 +479,10 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment: Daniel has positive attitude towards learning.<br></p>
+                   <p>Class Teachers Comment: Daniel has a bright mind.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good performance.<br></p>
+                     <p>Head Teachers Comment: A very good performance. keep it up <br></p>
 
                      &nbsp;
                      &nbsp;                
