--- a/PreSchool/Fakayode-Adesewa-Result.html
+++ b/PreSchool/Fakayode-Adesewa-Result.html
@@ -118,7 +118,7 @@
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>114</td> 
+                         <td>122</td> 
                                         
                       </tr>
                      </table>
@@ -479,10 +479,10 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment: This is an excellent result. Keep challenging yourself.<br></p>
+                   <p>Class Teachers Comment: Adesewa has made tremendous progress this term.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is an excellent performance. <br></p>
+                     <p>Head Teachers Comment: Promoted to grade one. <br></p>
 
                      &nbsp;
                      &nbsp;               
