--- a/PreSchool/Gentry-Anfelaoluwa-Result.html
+++ b/PreSchool/Gentry-Anfelaoluwa-Result.html
@@ -118,7 +118,7 @@
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>118</td> 
+                         <td>122</td> 
                                         
                       </tr>
                      </table>
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Anfelaoluwa needs to keep challenging himself.<br></p>
+                    <p>Class Teachers Comment: Anfelaoluwa has shown progress in class.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good performance<br></p>
+                     <p>Head Teachers Comment: A very good performance. keep it up.<br></p>
 
                      &nbsp;
                      &nbsp;    
