--- a/GradeFive/Asake-Morire-Result.html
+++ b/GradeFive/Asake-Morire-Result.html
@@ -260,15 +260,15 @@
                         </tr>
                        
                         <tr>
+                          <td>Good</td>
+                          <td>Excellent</td>
+                          <td>Average</td>
                           <td>V.Good</td>
                           <td>Excellent</td>
-                          <td>Excellent</td>
-                          <td>Excellent</td>
-                          <td>V.Good</td>
                           <td>Excellent</td>
                           <td>Excellent</td>
                           <td>Good</td>
-                          <td>V.Good</td>
+                          <td>Good</td>
                           <td>Excellent</td>
                           <td>Excellent</td>
                           <td>-</td>
