--- a/PreSchool/Iremide-Okunola-Result.html
+++ b/PreSchool/Iremide-Okunola-Result.html
@@ -117,7 +117,7 @@
                     </tr>
                     <tr>
                        <td>No. of times present</td>
-                       <td>120</td> 
+                       <td>116</td> 
                                       
                     </tr>
                    </table>
@@ -223,8 +223,8 @@
                            <td>86</td>
                            <td>73</td>
                            <td>75</td>
-                           <td>60</td>
                            <td>63</td>
+                           <td>60</td>
                            <td>90</td>
                            <td>100</td>
                            <td>100</td>
@@ -477,10 +477,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment:Good effort. Keep working hard. .<br></p>
+                      <p>Class Teachers Comment:Good job Iremide! Continue to practice at home  .<br></p>
+                        &nbsp.
                         &nbsp;
-                        &nbsp;
-                        <p>Head Teachers Comment: This is a good result but she needs to work harder next term.<br></p>
+                        <p>Head Teachers Comment: A very good performance.<br></p>
 
                         &nbsp;
                         &nbsp;                
