--- a/PreSchool/Kayode-Tantoluwa-Result.html
+++ b/PreSchool/Kayode-Tantoluwa-Result.html
@@ -116,7 +116,7 @@
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>114</td> 
+                         <td>118</td> 
                                         
                       </tr>
                      </table>
@@ -479,10 +479,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: This is a fantastic performance.Keep soaring high. <br></p>
+                    <p>Class Teachers Comment: Tantoluwa has an inquisitive nature. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: A very good performance. Keep it up.<br></p>
+                     <p>Head Teachers Comment:This is a very good result. Keep it up.<br></p>
 
                      &nbsp;
                      &nbsp;
