--- a/PreSchool/Mogaji-Damilola-Result.html
+++ b/PreSchool/Mogaji-Damilola-Result.html
@@ -116,7 +116,7 @@
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>118</td> 
+                         <td>116</td> 
                                         
                       </tr>
                      </table>
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: This is a very good result.Keep working very hard. <br></p>
+                    <p>Class Teachers Comment: Keep making progress Damilola. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good performance..<br></p>
+                     <p>Head Teachers Comment: Promoted to grade one..<br></p>
 
                      &nbsp;
                      &nbsp;  
