--- a/PreSchool/Odusanya-Jemima-Result.html
+++ b/PreSchool/Odusanya-Jemima-Result.html
@@ -116,7 +116,7 @@
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>118</td> 
+                         <td>122</td> 
                                         
                       </tr>
                      </table>
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment:This is an excellent result.Keep soaring high. <br></p>
+                    <p>Class Teachers Comment:  <br>Keep being your awesome self</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: An excellent performance.Keep it up.<br></p>
+                     <p>Head Teachers Comment:<br> An excellent performance </p>
 
                      &nbsp;
                      &nbsp;  
