--- a/PreSchool/Ogundairo-Omotade-Result.html
+++ b/PreSchool/Ogundairo-Omotade-Result.html
@@ -116,7 +116,7 @@
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>118</td> 
+                         <td>116</td> 
                                         
                       </tr>
                      </table>
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment:This is a very good result.Keep up the good effort. <br></p>
+                    <p>Class Teachers Comment: Omotade is beginning to show interest in learning <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:A very good performance. <br></p>
+                     <p>Head Teachers Comment:This is a very good result. <br></p>
 
                      &nbsp;
                      &nbsp;  
