--- a/PreSchool/Oladipupo-Fikunremi-Result.html
+++ b/PreSchool/Oladipupo-Fikunremi-Result.html
@@ -283,7 +283,7 @@
                         <tr>
                            <td>Reading</td>
                            <td></td>
-                           <td></td>
+                           <td>*</td>
                            <td></td>
                            <td></td>
                            <td></td>
@@ -475,10 +475,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: Fikunremi is a great pupil. We are happy to have him in the Preschool class <br></p>
+                      <p>Class Teachers Comment: Great work Fikun, i am proud of your consistency <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment: You are welco.me to Preschool.<br></p>
+                        <p>Head Teachers Comment: This is an excellent.<br></p>
 
                         &nbsp;
                         &nbsp;                
