--- a/PreSchool/Oladipupo-Fikunremi-Result.html
+++ b/PreSchool/Oladipupo-Fikunremi-Result.html
@@ -478,7 +478,7 @@
                       <p>Class Teachers Comment: Great work Fikun, i am proud of your consistency <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment: This is an excellent.<br></p>
+                        <p>Head Teachers Comment: This is an excellent performance. Keep it up.<br></p>
 
                         &nbsp;
                         &nbsp;                
