--- a/PreSchool/Oladokun-Divine-Result.html
+++ b/PreSchool/Oladokun-Divine-Result.html
@@ -116,7 +116,7 @@
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>118</td> 
+                         <td>114</td> 
                                         
                       </tr>
                      </table>
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: A remarkable result.Divine, keep inspiring us. <br></p>
+                    <p>Class Teachers Comment: Great job Divine! You are a super star. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: An excellent performance.keep it up. <br></p>
+                     <p>Head Teachers Comment: Promoted to grade one. <br></p>
 
                      &nbsp;
                      &nbsp;
