--- a/PreSchool/Olapade-Thelight-Result.html
+++ b/PreSchool/Olapade-Thelight-Result.html
@@ -116,7 +116,7 @@
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>116</td> 
+                         <td>122</td> 
                                         
                       </tr>
                      </table>
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: An outstanding performance.The sky is not your limit .  <br ></p>
+                    <p>Class Teachers Comment: Great effort TheLight! I am proud of your consistency .  <br ></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:This is an excellent result.       <br.</p>
+                     <p>Head Teachers Comment:Promoted to grade one.       <br.</p>
 
                      &nbsp;
                      &nbsp;
