--- a/PreSchool/Olatunde-Blossom-Result.html
+++ b/PreSchool/Olatunde-Blossom-Result.html
@@ -116,7 +116,7 @@
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>120</td> 
+                         <td>118</td> 
                                         
                       </tr>
                      </table>
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: An outstanding performance. Keep challenging yourself.<br></p>
+                    <p>Class Teachers Comment: You are doing a great job.<br></p>
                     &nbsp;
                     &nbsp;
-                    <p>Head Teachers Comment:This is an excellent result.Keep soaring high. <br></p>
+                    <p>Head Teachers Comment: Promoted to grade one. <br></p>
 
                     &nbsp;
                     &nbsp;
