--- a/PreSchool/Olatunji-Ojima-Result.html
+++ b/PreSchool/Olatunji-Ojima-Result.html
@@ -116,7 +116,7 @@
                     </tr>
                     <tr>
                        <td>No. of times present</td>
-                       <td>102</td> 
+                       <td>112</td> 
                                       
                     </tr>
                    </table>
@@ -478,10 +478,10 @@
                        
                      </tr>
                   </table>
-                  <p>Class Teachers Comment: Olatunji has shown a lot of improvement this term. keep it up. <br></p>
+                  <p>Class Teachers Comment: Olatunji has a strong desire to learn. <br></p>
                   &nbsp;
                   &nbsp;
-                  <p>Head Teachers Comment:This is a very good result. <br></p>
+                  <p>Head Teachers Comment:A very good perforance. <br></p>
 
                   &nbsp;
                   &nbsp;
