--- a/PreSchool/Olayiwola-Shindara-Result.html
+++ b/PreSchool/Olayiwola-Shindara-Result.html
@@ -115,7 +115,7 @@
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>120</td> 
+                         <td>114</td> 
                                         
                       </tr>
                      </table>
@@ -477,10 +477,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment:This is an excellent performance.Keep soaring high. <br></p>
+                    <p>Class Teachers Comment: Shindara enjoys learning  . <br></p>
                     &nbsp;
                     &nbsp;
-                    <p>Head Teachers Comment: An excellent result.Keep it up.<br></p>
+                    <p>Head Teachers Comment: This is an excellent performance..<br></p>
 
                     &nbsp;
                     &nbsp;
