--- a/PreSchool/Oni-Irebami-Result.html
+++ b/PreSchool/Oni-Irebami-Result.html
@@ -112,7 +112,7 @@
                      </tr>
                      <tr>
                        <td>No. of times school opened</td>
-                       <td>120</td> 
+                       <td>122</td> 
                                       
                     </tr>
                     <tr>
@@ -480,10 +480,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: Irebami is a great pupil. We are happy to have her in the Preschool class<br></p>
+                      <p>Class Teachers Comment: Irebami is making great progress<br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:You are welcome Preschool.  _<br></p>
+                        <p>Head Teachers Comment: This is a very good performance.  _<br></p>
 
                         &nbsp;
                         &nbsp;                
