--- a/PreSchool/Oyenusi-Ifeoluwa-Result.html
+++ b/PreSchool/Oyenusi-Ifeoluwa-Result.html
@@ -116,7 +116,7 @@
                     </tr>
                     <tr>
                        <td>No. of times present</td>
-                       <td>112</td> 
+                       <td>116</td> 
                                       
                     </tr>
                    </table>
@@ -477,10 +477,10 @@
                        
                      </tr>
                   </table>
-                  <p>Class Teachers Comment: This is a very good performance. Your progress is commendable.<br></p>
+                  <p>Class Teachers Comment: I am so proud of the progress you are making.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:A very good result.Keep it up. <br></p>
+                     <p>Head Teachers Comment: Promoted to grade one. <br></p>
 
                      &nbsp;
                      &nbsp;  
