--- a/PreSchool/Wahab-Abdulwahab-Result.html
+++ b/PreSchool/Wahab-Abdulwahab-Result.html
@@ -117,7 +117,7 @@
                     </tr>
                     <tr>
                        <td>No. of times present</td>
-                       <td>106</td> 
+                       <td>96</td> 
                                       
                     </tr>
                    </table>
@@ -475,10 +475,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: A very good result. Keep up the positive attitude.<br></p>
+                      <p>Class Teachers Comment: Abdulwahab has a wonderful inquisitive nature.<br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment: We are happy to have you as part of our school community. You are welcome to preschool.<br></p>
+                        <p>Head Teachers Comment: Promoted to grade one.<br></p>
 
                         &nbsp;
                         &nbsp;                
