--- a/PreSchool/Wahab-Ahmad-Hassan-Result.html
+++ b/PreSchool/Wahab-Ahmad-Hassan-Result.html
@@ -117,7 +117,7 @@
                     </tr>
                     <tr>
                        <td>No. of times present</td>
-                       <td>106</td> 
+                       <td>96</td> 
                                       
                     </tr>
                    </table>
@@ -481,10 +481,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: Ahmad Hassan is a great pupil. <br></p>
+                      <p>Class Teachers Comment: Hassan has a positive attitude towards learning. <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:We are happy to have you as part of our school community. Welcome to preschool.<br></p>
+                        <p>Head Teachers Comment: This is a very good performance.<br></p>
 
                         &nbsp;
                         &nbsp;                
