--- a/GradeOne/Olayiwola-Zeenat-Result.html
+++ b/GradeOne/Olayiwola-Zeenat-Result.html
@@ -504,7 +504,7 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment: I appreciate Zeenat quality of work, motivation to do well and her attitude to class work. I wish you good luck in the next class. .</p>
+                                             <p>Class Teachers Comment: I appreciate Zeenat's quality of work, motivation to do well and her attitude to class work. I wish you good luck in the next class. .</p>
                                              &nbsp;
                                              &nbsp;
                                              <p>Head Teachers Comment: Promoted to grade 2.</p>
