--- a/PreSchool/Wahab-Aminullah-Hussain-Result.html
+++ b/PreSchool/Wahab-Aminullah-Hussain-Result.html
@@ -117,7 +117,7 @@
                     </tr>
                     <tr>
                        <td>No. of times present</td>
-                       <td>106</td> 
+                       <td>94</td> 
                                       
                     </tr>
                    </table>
@@ -479,10 +479,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment:Aminullah Hussain is always willing to learn.  <br></p>
+                      <p>Class Teachers Comment:Aminullah Hussain has a bright mind.  <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:We are happy to have you as part of our school community. You are welcome to preschool.<br></p>
+                        <p>Head Teachers Comment: This is a very good performance<br></p>
 
                         &nbsp;
                         &nbsp;                
