--- a/PreSchool/Yinka-Sobo-Ogooluwa-Result.html
+++ b/PreSchool/Yinka-Sobo-Ogooluwa-Result.html
@@ -477,10 +477,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Ogooluwa performs excelllently academically.<br></p>
+                    <p>Class Teachers Comment: I am pleased with Ogooluwa's dedication.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good performance.Keep it up<br></p>
+                     <p>Head Teachers Comment: Ogooluwa's performance is commendable <br></p>
 
                      &nbsp;
                      &nbsp;
