--- a/PreSchool/Agbejoye-Ayanfe-Result.html
+++ b/PreSchool/Agbejoye-Ayanfe-Result.html
@@ -239,7 +239,7 @@
                   
                    <tr>
                      <td>Excellent</td>
-                     <td>ery good</td>
+                     <td>very good</td>
                      <td>Good</td>
                      <td>Average</td>
                      <td>Excellent</td>
