--- a/PreSchool/Ede-Ryan-Result.html
+++ b/PreSchool/Ede-Ryan-Result.html
@@ -241,7 +241,7 @@
                         <td>Excellent</td>
                         <td>Excellent</td>
                         <td>Good</td>
-                        <td>ery good</td>
+                        <td>Very good</td>
                         <td>Good</td>
                         <td>Average</td>
                         <td>Very good</td>
