--- a/GradeThree/Akinpelu-Oluwatosin-Result.html
+++ b/GradeThree/Akinpelu-Oluwatosin-Result.html
@@ -505,7 +505,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Oluwatosin is brilliant and hardworking.</p>
+                     <p>Class Teachers Comment: Oluwatosin participates actively in the classroom.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Promoted to grade 4.</p>
