--- a/PreSchool/Oluwaseun-David.html
+++ b/PreSchool/Oluwaseun-David.html
@@ -105,7 +105,7 @@
                                        <div class="board">
                                           <i><img src="images/top_icon.png" alt="#"/></i>
                                           <h3>
-                                             Adeyemo <br>Matthew's<br> Portal
+                                             Oluwaseun<br> David<br> Portal
                                           </h3>
                                           <!--div class="link_btn">
                                              <a class="read_more" href="Javascript:void(0)">Read More   <span></span></a>
@@ -131,7 +131,7 @@
                                              Results<br> Notes<br> Records
                                           </h3>
                                           <div class="link_btn">
-                                             <a class="read_more" href=""> Adeyemo Matthew<span></span></a>
+                                             <a class="read_more" href=""> Oluwaseun David<span></span></a>
                                           </div>
                                        </div>
                                     </div>
@@ -201,7 +201,7 @@
                      <h3>Results</h3>
                      <p>Click read more to see results</p>
                   </div>
-                  <a class="read_more" href="Adeyemo-Matthew-Result.html">Read More</a>
+                  <a class="read_more" href="Oluwaseun David-Result.html">Read More</a>
                </div>
                <div class="col-md-4 margi_bottom">
                   <div class="class_box blue text_align_center">
