--- a/PreSchool/Oluwarotimi-Success.html
+++ b/PreSchool/Oluwarotimi-Success.html
@@ -105,7 +105,7 @@
                                        <div class="board">
                                           <i><img src="images/top_icon.png" alt="#"/></i>
                                           <h3>
-                                             Adeyemo <br>Matthew's<br> Portal
+                                             Oluwarotimi <br>Success's<br> Portal
                                           </h3>
                                           <!--div class="link_btn">
                                              <a class="read_more" href="Javascript:void(0)">Read More   <span></span></a>
