--- a/GradeFour/Afolabi-Abdulfatah-Result.html
+++ b/GradeFour/Afolabi-Abdulfatah-Result.html
@@ -272,7 +272,7 @@
                           <td>Good</td>
                           <td>Very good</td>
                           <td>Excellent</td>
-                          <td>Fair</td>
+                          <td>Good</td>
                           <td>Very good</td>
                           <td>Average</td>
                           <td></td>
