--- a/GradeFive/Ariyo-Yanmife-Result.html
+++ b/GradeFive/Ariyo-Yanmife-Result.html
@@ -92,10 +92,9 @@
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Ariyo Yanmife</h2><br>
-                     <h2> Grade Five </h2>
                      <h2> Grade Six </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term : 1st Term 2024/2025
+                        <p>Continuous Assessment Scores for Term: 1st Term 2024/2025................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -510,6 +509,8 @@
                      &nbsp;
                      <p>Head Teachers Comment:A good performance (Promoted to grade 6).<br>_____________________________________________________</p>
 
+                     <h2>Result for <br>Ariyo Yanmife</h2><br>
+                     <h2> Grade Five </h2>
                      <table>
                         <p>Continuous Assessment Scores for Term  ..3rd Term 2023/2024................... </p>
                          
