--- a/GradeFive/Ariyo-Yanmife-Result.html
+++ b/GradeFive/Ariyo-Yanmife-Result.html
@@ -179,7 +179,7 @@
                            <td>80</td>
                            <td>70</td>
                            <td>85</td>
-                           <td>Marks Obtainable</td>
+                           <td>Marks Obtained</td>
                            
                            <td>1st Half</td>       
                         </tr>
