--- a/GradeFive/Yinka-Sobo-Daniel-Semilore-Result.html
+++ b/GradeFive/Yinka-Sobo-Daniel-Semilore-Result.html
@@ -181,7 +181,7 @@
                            <td>66</td>
                            <td>80</td>
                            <td>-</td>
-                           <td>Marks Obtainable</td>
+                           <td>Marks Obtained</td>
                            
                            <td>1st Half</td>       
                         </tr>
