--- a/GradeOne/Elue-Andrea-Result.html
+++ b/GradeOne/Elue-Andrea-Result.html
@@ -505,7 +505,7 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment:<br>A very Good performance, keep it up.</p>
+                                             <p>Class Teachers Comment:<br>A very good performance, keep it up.</p>
                                              &nbsp;
                                              &nbsp;
                                              <p>Head Teachers Comment: <br> Well done! Andrea</p
