--- a/GradeOne/Olufidipe-Obaloluwa-Result.html
+++ b/GradeOne/Olufidipe-Obaloluwa-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Olufidipe Obaloluwa</h2><br>
                      <h2> Grade Two </h2>
-                       <table><p>Continuous Assessment Scores for Term : 3rd term 2023/2024. </p>
+                       <table><p>Continuous Assessment Scores for Term : 1st term 2024/2025. </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
