--- a/GradeFive/Ariyo-Yanmife-Result.html
+++ b/GradeFive/Ariyo-Yanmife-Result.html
@@ -502,10 +502,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:Keep up the fantastic work!.<br></p> Yanmife is not working to full potential
+                     <p>Class Teachers Comment:<br>Yanmife is not working to full potential</p> 
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:A good performance (Promoted to grade 6).<br>A very good performance</p>
+                     <p>Head Teachers Comment:<br>A very good performance</p>
 
                      <h2>Result for <br>Ariyo Yanmife</h2><br>
                      <h2> Grade Five </h2>
