--- a/GradeOne/Motoro-Zara-Result.html
+++ b/GradeOne/Motoro-Zara-Result.html
@@ -92,6 +92,7 @@
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Motoro Zara</h2><br>
+                     <h2>Grade Two </h2>
                      <table>
                         <p>Continuous Assessment Scores for Term:  1st term 2024/2025 </p>
                                              <!-- Attendance Table-->
