--- a/PreSchool/Adelakun-Ideraoluwa-Result.html
+++ b/PreSchool/Adelakun-Ideraoluwa-Result.html
@@ -117,7 +117,7 @@
                     </tr>
                     <tr>
                        <td>No. of times present</td>
-                       <td></td> 
+                       <td>118</td> 
                                       
                     </tr>
                    </table>
@@ -445,10 +445,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                      <p>Class Teachers Comment: This is a good resuit <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                        <p>Head Teachers Comment: We are are happy to have ypu as part of our school community  <br></p>
 
                         &nbsp;
                         &nbsp;                
