--- a/PreSchool/Adepoju-Jaron-Result.html
+++ b/PreSchool/Adepoju-Jaron-Result.html
@@ -117,7 +117,7 @@
                     </tr>
                     <tr>
                        <td>No. of times present</td>
-                       <td></td> 
+                       <td>110</td> 
                                       
                     </tr>
                    </table>
@@ -445,10 +445,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                      <p>Class Teachers Comment: This is a very good rsuult. <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                        <p>Head Teachers Comment:We are happy to have you as part of our school community.<br></p>
 
                         &nbsp;
                         &nbsp;                
