--- a/PreSchool/Adewale-Kikiola-Result.html
+++ b/PreSchool/Adewale-Kikiola-Result.html
@@ -117,7 +117,7 @@
                     </tr>
                     <tr>
                        <td>No. of times present</td>
-                       <td></td> 
+                       <td>118</td> 
                                       
                     </tr>
                    </table>
@@ -449,10 +449,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                      <p>Class Teachers Comment: This is a very good performance.<br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                        <p>Head Teachers Comment:You are welcome to preschool.<br></p>
 
                         &nbsp;
                         &nbsp;                
