--- a/PreSchool/Babalola-Annabelle-Result.html
+++ b/PreSchool/Babalola-Annabelle-Result.html
@@ -117,7 +117,7 @@
                     </tr>
                     <tr>
                        <td>No. of times present</td>
-                       <td>112</td> 
+                       <td>114</td> 
                                       
                     </tr>
                    </table>
@@ -482,7 +482,7 @@
                       <p>Class Teachers Comment: <br> This is an exceptional result.  </p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:This is an excellent performance.<br></p>
+                        <p>Head Teachers Comment:This is an excellent performance.keep it up.<br></p>
 
                         &nbsp;
                         &nbsp;                
