--- a/PreSchool/Ede-Ryan-Result.html
+++ b/PreSchool/Ede-Ryan-Result.html
@@ -287,8 +287,8 @@
                      <tr>
                         <td>Reading</td>
                         <td></td>
-                        <td>*</td>
                         <td></td>
+                        <td>*</td>
                         <td></td>
                         <td></td>
                         
@@ -479,10 +479,10 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment:This is a good result. Work harder for an excellent result next term .<br></p>
+                   <p>Class Teachers Comment:Ryan has shown good progress this term. .<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:A good performance.<br></p>
+                     <p>Head Teachers Comment:This is a good performance.<br></p>
 
                      &nbsp;
                      &nbsp;                
