--- a/PreSchool/Mogaji-Damilola-Result.html
+++ b/PreSchool/Mogaji-Damilola-Result.html
@@ -89,9 +89,9 @@
               
                <div class="col-md-5 order_1_mobile">
                   <div class="titlepage p1">
+
+                     
                      <h2>Result for <br>Mogaji Damilola</h2><br>
-                     <h2> Pre School </h2>
-                      h2>Result for <br>Akinpelu Tobiloba</h2><br>
                      <h2> Grade one </h2>
                      table>
                                              <p>Continuous Assessment Scores for Term : 1st Term 2024/2025. </p>
@@ -511,6 +511,8 @@
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment:A good performance</p>
+                     <h2>Result for <br>Mogaji Damilola</h2><br>
+                     <h2> Pre School </h2>
                      <p>Continuous Assessment Scores for Term Third 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
