--- a/PreSchool/Ladigbolu-Darasimi-Result.html
+++ b/PreSchool/Ladigbolu-Darasimi-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1">
                      <h2>Result for <br>Ladigbolu Darasimi</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term Third 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term First 2024/2025 </p>
                   <!-- Attendance Table-->
                   &nbsp;
                   &nbsp;
@@ -285,8 +285,8 @@
                         <tr>
                            <td>Reading</td>
                            <td></td>
-                           <td>*</td>
                            <td></td>
+                           <td>*</td>
                            <td></td>
                            <td></td>
                            
