--- a/PreSchool/Ogundairo-Omotade-Result.html
+++ b/PreSchool/Ogundairo-Omotade-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Ogundairo Omotade</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term Third 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term First 2024/2025 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -286,8 +286,8 @@
                       <tr>
                          <td>Reading</td>
                          <td></td>
-                         <td>*</td>
                          <td></td>
+                         <td>*</td>
                          <td></td>
                          <td></td>
                          
