--- a/PreSchool/Falode-Oluwalonimi-Obaloluwa-Result.html
+++ b/PreSchool/Falode-Oluwalonimi-Obaloluwa-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1">
-                     h2>Result for <br>Falode Oluwaloni</h2><br>
+                     h2>Result for <br>Falode Oluwalonimi Obaloluwa</h2><br>
                      <h2> Grade one </h2>
                      table>
                                              <p>Continuous Assessment Scores for Term : 1st Term 2024/2025. </p>
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td>108</td> 
+                          <td>118</td> 
                                          
                        </tr>
                       </table>
