--- a/PreSchool/Adepoju-Jaron-Result.html
+++ b/PreSchool/Adepoju-Jaron-Result.html
@@ -163,7 +163,7 @@
                           <td>65</td>
                           <td>60</td>
                           <td>75</td>
-                          <td>100</td>
+                          <td></td>
                           <td>100</td>
                           <td>100</td>
                           <td>100</td>
@@ -194,7 +194,7 @@
                            <td>82</td>
                            <td>75</td>
                            <td>85</td>
-                           <td>100</td>
+                           <td></td>
                            <td>100</td>
                            <td>100</td>
                            <td>100</td>
@@ -224,7 +224,7 @@
                            <td>74</td>
                            <td>68</td>
                            <td>80</td>
-                           <td>100</td>
+                           <td></td>
                            <td>100</td>
                            <td>100</td>
                            <td>100</td>
@@ -240,10 +240,10 @@
                            <td>Good</td>
                            <td>Average</td>
                            <td>Very good</td>
-                           <td>Very good</td>
-                           <td>Good</td>
-                           <td>Average</td>
-                           <td>Very good</td>
+                           <td></td>
+                           <td>Excellent</td>
+                           <td>excellent</td>
+                           <td>Excellent</td>
                            <td></td>
                         
                            
