--- a/PreSchool/Gentry-Anfelaoluwa-Result.html
+++ b/PreSchool/Gentry-Anfelaoluwa-Result.html
@@ -478,7 +478,7 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Anfelaoluwa has shown an impressive attitude tqwards learning this term.<br></p>
+                    <p>Class Teachers Comment: Anfelaoluwa has shown an impressive attitude towards learning this term.<br></p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: This is an excellent performance, Anfelaoluwa.<br></p>
