--- a/GradeFour/Adeniba-Tofunmi-Result.html
+++ b/GradeFour/Adeniba-Tofunmi-Result.html
@@ -264,7 +264,7 @@
                         <tr>
                           <td>Average</td>
                           <td>Average</td>
-                          <td>Fair</td>
+                          <td>Average</td>
                           <td>Average</td>
                           <td>Average</td>
                           <td>Average</td>
