--- a/GradeFour/Oluwaseun-Elizabeth-Result.html
+++ b/GradeFour/Oluwaseun-Elizabeth-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
-                     <h2>Result for <br>Akinfewa Elizabeth Oluwagbemi</h2><br>
+                     <h2>Result for <br>Akinfela Elizabeth Oluwagbebemi</h2><br>
                      <h2> Grade Five </h2>
                      table>
                         <p>Continuous Assessment Scores for Term: 1st term 2024/2025 </p>
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td>120</td> 
+                          <td>114</td> 
                                          
                        </tr>
                       </table>
