--- a/King-Jomiloju-Result.html
+++ b/King-Jomiloju-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>King Jomiloju</h2><br>
                      <h2> Grade Seven </h2>
                      <table>
-                        <p>Continuous Assessment Scores for 1st Term  ..................... </p>
+                        <p>Continuous Assessment Scores for 1st Term  2024/2025..................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td>110</td> 
+                          <td>102</td> 
                                          
                        </tr>
                       </table>
