--- a/Odeleye-Paul-Result.html
+++ b/Odeleye-Paul-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Odeleye Paul</h2><br>
                      <h2> Grade Seven </h2>
                      <table>
-                        <p>Continuous Assessment Scores for 1stTerm  .2024/2025.................... </p>
+                        <p>Continuous Assessment Scores for 1st Term  2024/2025.................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
