--- a/PreSchool/Ismail-Fahhama-Result.html
+++ b/PreSchool/Ismail-Fahhama-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1">
-                     <h2>Result for <br>Isamil Fahhama</h2><br>
+                     <h2>Result for <br>Ismail Fahhama</h2><br>
                      <h2> Pre School </h2>
                      <p>Continuous Assessment Scores for Term First 2024/2025 </p>
                   <!-- Attendance Table-->
