--- a/PreSchool/Akinpelu-Tobiloba-Result.html
+++ b/PreSchool/Akinpelu-Tobiloba-Result.html
@@ -507,7 +507,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Tobiloba is making rematkable progress. Keep it up.</p>
+                     <p>Class Teachers Comment: Tobiloba is making remarkable progress. Keep it up.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment:A very good performance</p>
