--- a/PreSchool/Adelakun-Ideraoluwa-Result.html
+++ b/PreSchool/Adelakun-Ideraoluwa-Result.html
@@ -483,7 +483,7 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: This is a good resuit <br></p>
+                      <p>Class Teachers Comment: This is a good performance. <br></p>
                         &nbsp;
                         &nbsp;
                         <p>Head Teachers Comment: We are are happy to have ypu as part of our school community  <br></p>
