--- a/PreSchool/Adepoju-Jaron-Result.html
+++ b/PreSchool/Adepoju-Jaron-Result.html
@@ -477,7 +477,7 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: This is a very good rsuult. <br></p>
+                      <p>Class Teachers Comment: This is a very good report. <br></p>
                         &nbsp;
                         &nbsp;
                         <p>Head Teachers Comment:We are happy to have you as part of our school community.<br></p>
